styles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
}

.hero-section {
    min-height: 100vh;
    background-color: seagreen;

    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-areas: 
    "navbar navbar"
    "main main"
    "footer footer";

    grid-template-rows: auto 1fr auto;

    background-image:  url(/img/bg.jpg);
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
}

.hero-section nav {
    background-color: sienna;
    padding: 1rem 2rem;
    display: flex;
    justify-content: space-between;
    align-items: center;
    /* max-height: 10vh; */
    grid-area: navbar;

    position: sticky;
    top: 0;
    z-index: 100;
}

.hero-section .btn-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 24px;
}

.hero-section nav button {
    padding: 12px 16px;
    border: none;
    border-radius: 2rem;
    cursor: pointer;
    background-color: #ddbf14;
    color: sienna;
    font-size: 1.2rem;
    font-weight: bolder;
}

.hero-section nav button:hover {
    color: rgba(160, 81, 45, 0.698);
}

.main-container {
    display: flex;
    /* justify-content: flex-start; */
    /* justify-content: center;
    align-items: center; */

    grid-area: main;
}

.main-container .start-game {
    height: 300px;
    width: min(90%, 400px);
    border: 2px solid sienna;
    border-radius: 1.5rem;
    padding: 1rem 2rem;
    /* margin-left: 100px; */
    margin-top: 50px;
    background-color: #FFF7E9;
    /* display: flex; */
        display: flex;
    flex-direction: column;
    overflow: hidden;
}
.start-game .size-btns {
    display: flex;
    flex-wrap: wrap;
}

.main-container .start-game button {
    border-radius: 1rem;
    border: 2px solid sienna;
    padding: 0.75rem 1.25rem;
    background: none;
    cursor: pointer;
    font-size: 1.2rem;
    color: sienna;

    min-width: 50px;
    min-height: 33px;
}


.hidden {
    display: none !important;
}

.main-container .start-game .size-btns {
    display: flex;
    justify-content: space-around;
}

.main-container .start-game .start-btn, .text-title   {
    text-align: center;
    margin: 1rem 0;
}

.main-container .start-game .choose-cards {
    flex: 1;
    /* padding: 2rem; */
    background-color: seagreen;
    /* ! parent: .start-game  is not a flex container */
}


/* ! Gotta debug the flex: 1; not working */

.game-container {
    position: relative; /* 👈 THIS is key */
    width: min(100%, 500px);
    margin: 1rem auto;
    /* background-color: sienna; */

    display: grid;
    grid-template-columns: repeat(4, 1fr);
    gap: 12px;
}

.game-container img {
    width: 100%;
    aspect-ratio: 2 / 3;
    height: auto;
    object-fit: cover;
}


.matched {
    visibility: hidden;
}

.game-over {
    position: absolute;
    inset: 0; /* top:0 right:0 bottom:0 left:0 */

    /* display: flex;
    justify-content: center;
    align-items: center; */

    z-index: 10;;
}

.game-over img {
    height: 200px;
    width: 500px;
}

footer {
    grid-area: footer;
    background-color: sienna;
}

.mobile-only {
    display: none;
}

@media(max-width: 450px) {
    .game-container, .main-container, .start-game {
        width: 100%;
        margin: 0;
        padding: 0;
    }

    .game-container {
        grid-template-columns: repeat(3, 1fr);
    }
    nav button {
        display: none;
    }
    nav h2 {
        display: none;
    }

    .mobile-only {
        display: inline-block;
    }
}

/* TODO: complete the 5 responsive rules */

